@@ -1,10 +1,10 @@
-dnl CF_WITH_VERSIONED_SYMS version: 2 updated: 2014/11/15 19:05:29
+dnl CF_WITH_VERSIONED_SYMS version: 3 updated: 2014/12/20 19:16:08
 dnl ----------------------
 dnl Use this when building shared library with ELF, to markup symbols with the
 dnl version identifier from the given input file.  Generally that identifier is
 dnl the same as the SONAME at which the symbol was first introduced.
 dnl
-dnl $1 = basename of the ".sym" file (default $PACKAGE)
+dnl $1 = basename of the ".map" file (default $PACKAGE)
 AC_DEFUN([CF_WITH_VERSIONED_SYMS],
 [
 AC_MSG_CHECKING(if versioned-symbols file should be used)
@@ -19,17 +19,20 @@ then
 fi
 AC_MSG_RESULT($with_versioned_syms)
 
+RESULTING_SYMS=
+VERSIONED_SYMS=
+
 if test "x$with_versioned_syms" != xno
 then
-	AC_SUBST(VERSIONED_SYMS)
+	RESULTING_SYMS=$with_versioned_syms
 	case "x$MK_SHARED_LIB" in
 	*-Wl,*) #(vi
-		VERSIONED_SYMS="-Wl,--version-script,$with_versioned_syms"
+		VERSIONED_SYMS="-Wl,--version-script,\$(RESULTING_SYMS)"
 		MK_SHARED_LIB=`echo "$MK_SHARED_LIB" | sed -e "s%-Wl,%\\[$]{VERSIONED_SYMS} -Wl,%"`
 		CF_VERBOSE(MK_SHARED_LIB:  $MK_SHARED_LIB)
 		;;
 	*-dy*) #(vi
-		VERSIONED_SYMS="-Wl,-M,$with_versioned_syms"
+		VERSIONED_SYMS="-Wl,-M,\$(RESULTING_SYMS)"
 		MK_SHARED_LIB=`echo "$MK_SHARED_LIB" | sed -e "s%-dy%\\[$]{VERSIONED_SYMS} -dy%"`
 		CF_VERBOSE(MK_SHARED_LIB:  $MK_SHARED_LIB)
 		;;
@@ -38,4 +41,6 @@ then
 		;;
 	esac
 fi
+AC_SUBST(RESULTING_SYMS)
+AC_SUBST(VERSIONED_SYMS)
 ])dnl
